--- a/matema.html
+++ b/matema.html
@@ -19,7 +19,7 @@
        * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        */
 
-      var quiztitle = "Bahasa Indonesia";
+      var quiztitle = "Matematika";
 
       /**
        * Set the information about your questions here. The correct answer string needs to match
@@ -28,45 +28,34 @@
        */
       var quiz = [
         {
-          question: "1. Petok..Petok... adalah suara hewan...",
-          choices: ["Monyet", "Ayam", "Itik", "Kambing"],
-          correct: "Ayam",
-          explanation:
-            "Ayam adalah jenis burung yang umumnya dipelihara untuk daging dan telurnya.",
+          question: "1. Hasil dari 2+1...",
+          choices: ["4", "6", "3", "5"],
+          correct: "3"
         },
         {
-          question: "2. Aku mendengar dengan.... dan melihat dengan...",
+          question: "2. Hasil dari 7-3...",
           choices: [
-            "Telinga dan mata",
-            "Mata dan telinga",
-            "Mata dan mulut",
-            "Telinga dan hidung",
+            "6",
+            "2",
+            "5",
+            "4",
           ],
-          correct: "Telinga dan mata",
-          explanation:
-            "Telinga dan mata adalah ungkapan yang merujuk kepada informasi atau pengetahuan yang dipahami atau diingat dengan cepat dan mudah.",
+          correct: "4",
         },
         {
-          question: "3.Dimana habitat hewan dibawah!",
-          image: "kakek-didenda-karena-ayam-berkokok.jpeg",
-          choices: ["Darat", "Air", "Udara", "Kolam"],
-          correct: "Darat",
-          explanation:
-            "Ayam adalah jenis burung yang biasanya tinggal di darat, seringkali di kandang atau di area yang aman dari predator.",
+          question: "3. Hasil dari 1x1...",
+          choices: ["2", "1", "3", "11"],
+          correct: "1",
         },
         {
-          question: "4.Hewan apa yang bertelur",
-          choices: ["Sapi", "Ayam", "Paus", "Singa"],
-          correct: "Ayam",
-          explanation:
-            "Ayam adalah jenis burung yang umumnya dipelihara untuk daging dan telurnya.",
+          question: "4. Hasil dari 4:2...",
+          choices: ["2", "3", "8", "4"],
+          correct: "2",
         },
         {
-          question: "5.! disebut tanda..",
-          choices: ["Tanya", "Seru", "Titik", "Koma"],
-          correct: "Seru",
-          explanation:
-            "Tanda seru (!) digunakan untuk mengekspresikan perasaan kagum, kegembiraan, kejutan, atau pentingnya suatu informasi dalam teks tertulis.",
+          question: "5. Hasil dari 2+3...",
+          choices: ["5", "4", "6", "1"],
+          correct: "5",
         },
       ];
 
